Add timing callback to db dump migration

--- a/config/dump_db_migration/example_inventory/ansible_config.cfg
+++ b/config/dump_db_migration/example_inventory/ansible_config.cfg
@@ -13,6 +13,9 @@ host_key_checking = False
 # Get rid of the cows
 nocows = 1
 
+# Add task timing information so we can see how long the import and migration take
+callback_whitelist = profile_tasks
+
 [ssh_connection]
 # These speed things up. Other techniques here:
 # https://dzone.com/articles/speed-up-ansible
