--- a/stroom/roles/stack/deploy/defaults/main.yml
+++ b/stroom/roles/stack/deploy/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
-stack_bin_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
-stack_config_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}/config"
-stack_volumes_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/volumes"
+stack_version_base_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_version }}"
+stack_bin_dir: "{{ stack_version_base_dir }}/bin"
+stack_config_dir: "{{ stack_bin_dir }}/config"
+stack_volumes_dir: "{{ stack_version_base_dir }}/volumes"
+
 stack_env_var_file: "{{ stack_config_dir }}/{{ stack_name }}.env"
 stack_env_vars: {}
