--- a/stroom/roles/stack/download/tasks/main.yml
+++ b/stroom/roles/stack/download/tasks/main.yml
@@ -21,8 +21,6 @@
     path: "{{ stack_version_base_dir }}"
   register: _stack_version_base_dir_info
 
-  # TODO we may want to always download the release and overerite
-  # what is there to ensure we have the right config
 - name: "Download archive {{ _stroom_stack_archive_url }}" 
   when: _stack_version_base_dir_info.stat.exists == false
   include_tasks: download_and_unpack.yml
@@ -34,12 +32,12 @@
     src: "{{ stack_version }}" # relative to dest
     dest: "{{ _stack_install_latest_link }}" # absolute
 
-- debug:
-    var: _stack_unpack_tmp_dir_info | default('undefined')
+#- debug:
+    #var: _stack_unpack_tmp_dir_info | default('undefined')
 
-- name: "Delete temporary directory"
-  file:
-    path: "{{ _stack_unpack_tmp_dir_info.path }}"
-    state: absent
-  when: _stack_version_base_dir_info.stat.exists == false
-        and _stack_unpack_tmp_dir_info is defined
+#- name: "Delete temporary directory"
+  #file:
+    #path: "{{ _stack_unpack_tmp_dir_info.path }}"
+    #state: absent
+  #when: _stack_version_base_dir_info.stat.exists == false
+        #and _stack_unpack_tmp_dir_info is defined
