--- a/stroom/roles/stack/download/vars/main.yml
+++ b/stroom/roles/stack/download/vars/main.yml
@@ -9,5 +9,9 @@ _stroom_stack_archive_url: "{{ stroom_stack_archive_url_base }}/{{ _stroom_stack
 _stack_archive_relative_bin_dir: "{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
 _stack_archive_relative_volumes_dir: "{{ stack_name }}/volumes"
 
+# Relative paths in the transformed stack archive
+_stack_archive_transformed_relative_bin_dir: "{{ stack_name }}/{{ stack_version }}/bin"
+_stack_archive_transformed_relative_volumes_dir: "{{ stack_name }}/{{ stack_version }}/volumes"
+
 
 _stack_install_latest_link: "{{ stack_install_root_dir }}/{{ stack_name }}/latest"
