Tidy up commented code, add pull_images

--- a/stroom/roles/stack/deploy/tasks/main.yml
+++ b/stroom/roles/stack/deploy/tasks/main.yml
@@ -44,3 +44,10 @@
         - deploy
         - configure
 
+    - name: Pull docker images
+      command: "./pull_images.sh -m"
+      args:
+        chdir: "{{ stack_bin_dir }}"
+      tags:
+        - deploy
+        - pull_images
