--- a/stroom/roles/stack/migrate/tasks/main.yml
+++ b/stroom/roles/stack/migrate/tasks/main.yml
@@ -6,7 +6,7 @@
       - stack_dir is defined
 
   # Have to tweak the path so the scripts can find the 'ip' binary
-- name: "Running migration on '{{ stack_name }}' in {{ stack_dir }}. This may take a LONG time!! You can ssh on to the host and tail the mirate log to see progress."
+- name: "Running migration on '{{ stack_name }}' in {{ stack_dir }}. This may take a LONG time!! You can ssh on to the host and tail the migrate log to see progress."
   shell: "export PATH=$PATH:/usr/sbin; ./migrate.sh -m"
   args:
     chdir: "{{ stack_dir }}"
