Refactor single node config for jinja2 env file

--- a/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
+++ b/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
@@ -1,5 +1,6 @@
 ---
 
+  # Copes if the dir path doesn't exist
 - name: "Deleting development certs in {{ _service_dev_certs.path }}"
   file:
     path: "{{ _service_dev_certs.path }}/{{ _cert_file_name }}"
