--- a/stroom/roles/stack/update_config/tasks/main.yml
+++ b/stroom/roles/stack/update_config/tasks/main.yml
@@ -53,8 +53,7 @@
   # TODO The files in the volumes dir need to be accessed by the user inside
   # the container which may have a different uid to the host user, thus we
   # need to open up read to g and o
-- name: Copy static files from {{ config_files_and_templates_dir }}/
-        to {{ stack_volumes_dir }}/
+- name: "Copy static files from {{ config_files_and_templates_dir }}/ to {{ stack_volumes_dir }}/"
   copy:
     src: "{{ item.src }}/"
     dest: "{{ stack_volumes_dir }}/{{ item.path }}"
@@ -77,8 +76,7 @@
   # TODO The files in the volumes dir need to be accessed by the user inside
   # the container which may have a different uid to the host user, thus we
   # need to open up read to g and o
-- name: Copy and template .j2 files from {{ config_files_and_templates_dir }}/
-        to {{ stack_volumes_dir }}/
+- name: "Copy and template .j2 files from {{ config_files_and_templates_dir }}/ to {{ stack_volumes_dir }}/"
   template:
     src: "{{ item.src }}/"
     dest: "{{ stack_volumes_dir }}/{{ item.path | regex_replace('.j2$','') }}"
