--- a/stroom/roles/stack/update_config/tasks/main.yml
+++ b/stroom/roles/stack/update_config/tasks/main.yml
@@ -55,7 +55,7 @@
   # need to open up read to g and o
 - name: "Copy static files from {{ config_files_and_templates_dir }}/ to {{ stack_volumes_dir }}/"
   copy:
-    src: "{{ item.src }}/"
+    src: "{{ item.src }}"
     dest: "{{ stack_volumes_dir }}/{{ item.path }}"
     mode: "u=rw,g=r,o=r"
     backup: true
@@ -64,8 +64,8 @@
     label: "{{ item.path }}"
   when: _config_files_and_templates_dir_info.stat.exists 
         and item.state == 'file' 
-        and item.path is not match ".*\.j2$"
-        and item.path is not match ".*\.gitkeep$" # Ignore .gitkeep files used to maintain empty dirs
+        and item.path is not match('.*\.j2$')
+        and item.path is not match('.*\.gitkeep$') # Ignore .gitkeep files used to maintain empty dirs
   tags:
     - deploy
     - configure
@@ -78,7 +78,7 @@
   # need to open up read to g and o
 - name: "Copy and template .j2 files from {{ config_files_and_templates_dir }}/ to {{ stack_volumes_dir }}/"
   template:
-    src: "{{ item.src }}/"
+    src: "{{ item.src }}"
     dest: "{{ stack_volumes_dir }}/{{ item.path | regex_replace('.j2$','') }}"
     mode: "u=rw,g=r,o=r"
     backup: true
@@ -87,8 +87,8 @@
     label: "{{ item.path }}"
   when: _config_files_and_templates_dir_info.stat.exists 
         and item.state == 'file' 
-        and item.path is match ".*\.j2$"
-        and item.path is not match ".*\.gitkeep$" # Ignore .gitkeep files used to maintain empty dirs
+        and item.path is match('.*\.j2$')
+        and item.path is not match('.*\.gitkeep$') # Ignore .gitkeep files used to maintain empty dirs
   tags:
     - deploy
     - configure
