--- a/config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
+++ b/config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
@@ -9,11 +9,11 @@ all:
           #public_ip_address: 192.168.100.11
         stroom-and-proxy-host-2:
           #public_ip_address: 192.168.100.12
-    stroom-services-stack:
+    stroom_services_stack:
       hosts:
         stroom-services-stack-host:
           #public_ip_address: 192.168.100.13
-    stroom-database:
+    stroom_database:
       hosts:
         stroom-database-host:
           #public_ip_address: 192.168.100.14
