Update regex in set_host_ip to allow for `export` in the line

--- a/stroom/roles/stack/set_host_ip/tasks/main.yml
+++ b/stroom/roles/stack/set_host_ip/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: "Setting HOST_IP=\"{{ public_ip_address | default(inventory_hostname) }}\" in {{ stack_env_var_file }}"
   lineinfile:
     path: "{{ stack_env_var_file }}"
-    regexp: '^\s*#?\s*HOST_IP=.*'
-    line: "HOST_IP=\"{{ public_ip_address | default(inventory_hostname) }}\""
+    regexp: '^\s*#?\s*(export\s+)?HOST_IP=.*'
+    line: "export HOST_IP=\"{{ public_ip_address | default(inventory_hostname) }}\""
 
 
